force-app/main/default/objects/ClassificationAttribute__c/ClassificationAttribute__c.object-meta.xml
<CustomObject>
    <label>Classification Attribute</label>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classification Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>