force-app/main/default/objects/ClassificationAttribute__c/fields/AttributeNameFR__c.field-meta.xml
<CustomField>
    <fullName>AttributeNameFR__c</fullName>
    <label>Attribute Name (FR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>