force-app/main/default/objects/ClassificationAttribute__c/fields/AttributeNameNL__c.field-meta.xml
<CustomField>
    <fullName>AttributeNameNL__c</fullName>
    <label>Attribute Name (NL)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>