force-app/main/default/objects/ClassificationAttribute__c/fields/AttributeNameSE__c.field-meta.xml
<CustomField>
    <fullName>AttributeNameSE__c</fullName>
    <label>Attribute Name (SE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>