force-app/main/default/objects/ClassificationAttribute__c/fields/isHigherEducation__c.field-meta.xml
<CustomField>
    <fullName>isHigherEducation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Higher Education</label>
    <type>Checkbox</type>
</CustomField>