force-app/main/default/objects/ClassificationAttribute__c/fields/isKindergarten__c.field-meta.xml
<CustomField>
    <fullName>isKindergarten__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kindergarten</label>
    <type>Checkbox</type>
</CustomField>