force-app/main/default/objects/ClassificationAttribute__c/fields/isSecondaryEducation__c.field-meta.xml
<CustomField>
    <fullName>isSecondaryEducation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Education</label>
    <type>Checkbox</type>
</CustomField>