force-app/main/default/objects/ClassificationAttribute__c/fields/isVocationalEducation__c.field-meta.xml
<CustomField>
    <fullName>isVocationalEducation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vocational Education</label>
    <type>Checkbox</type>
</CustomField>